# Maze

./: README.md
src/: CMakeLists.txt  Makefile  Maze_info.texi  main.cc
src/controller/: controller.h
src/model/: cave.cc  cave.h  maze.cc  maze.h
src/tests/: tests.cc
src/tests/materials/: incorrect_example_1  incorrect_example_2  incorrect_example_3
src/view/: mainwindow.cc  mainwindow.h  mainwindow.ui
